# pagemind

./: .env.example  .gitignore  CLAUDE.md  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml
docker/: compose.yaml  infinity.Dockerfile
migrations/: 001_initial.sql  002_phase1.sql  003_phase2.sql  004_phase6_checkpoints.sql  005_book_summary.sql  006_chapter_number.sql
pagemind/: __main__.py  cli.py  config.py  db.py
pagemind/api/: __init__.py
pagemind/ingest/: __init__.py  epub.py
pagemind/migrations/: __main__.py
pagemind/models/: chat.py  embeddings.py
pagemind/precompute/: __init__.py  checkpoint.py  embeddings.py  entities.py  summaries.py
pagemind/recipes/: __init__.py  chapter_summary.py  contextual_why.py  fact_lookup.py  generic_fallback.py  locate_entity.py  structured_view.py  verbatim_quote.py
pagemind/retrieval/: __init__.py  expand.py  lexical.py  rrf.py  scope.py  semantic.py  structured.py
pagemind/runtime/: __init__.py  fallback.py  history.py  orchestrator.py  quotes.py  reader.py  router.py  scope.py  streaming.py  synthesizer.py  types.py
pagemind/segment/: __init__.py  split.py  tokens.py  validate.py
scripts/: infinity-requirements.txt  make_tiny_epub.py  run-infinity.sh
tests/: test_ingest.py  test_precompute_resume.py  test_retrieval.py  test_runtime.py  test_smoke.py
tests/fixtures/: tiny.epub
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  api.ts  index.css  main.tsx
web/src/components/: BookHeader.tsx  PassagePopover.tsx  QuoteCard.tsx
(+10 files in other folders)
