[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pagemind"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sse-starlette>=2.1",
    "httpx>=0.27",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[project.scripts]
pagemind = "pagemind.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["pagemind"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
